# Bannin.dev

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  LICENSE  Makefile  README.md  feedback.html  priority-and-ideas.md  pyproject.toml  stress_test.py  test_gpu_alerts.py  test_key.py  test_llm_dashboard.py  test_streaming.py  test_training_demo.py  train.py  train_epochs.py  trial-colab.md  trial-powershell.md  trial-vscode.md  trial.md
bannin/: __init__.py  api.py  cli.py  dashboard.html  log.py  relay.py  state.py
bannin/analytics/: __init__.py  api.py  dashboard.html  pipeline.py  store.py
bannin/config/: defaults.json  loader.py
bannin/core/: collector.py  gpu.py  process.py  process_names.py
bannin/intelligence/: __init__.py  alerts.py  chat.py  history.py  oom.py  progress.py  recommendations.py  summary.py  training.py
bannin/llm/: __init__.py  aggregator.py  claude_session.py  connections.py  health.py  ollama.py  pricing.py  tracker.py  wrapper.py
bannin/mcp/: __init__.py  __main__.py  server.py  session.py
bannin/routes/: __init__.py  actions.py  analytics.py  intelligence.py  llm.py  mcp.py
docs/: Vigilo.docx  Vigilo_project.dev.pptx  development_log_phase1b_1c.md
prompts/: relay-backend.md  web-frontend.md
relay/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
relay/prisma/: schema.prisma  seed.ts
relay/prisma/migrations/: add_tsvector.sql
relay/src/: app.ts  constants.ts  index.ts
relay/src/config/: env.ts
relay/src/controllers/: agents.controller.ts  auth.controller.ts  dashboard.controller.ts  events.controller.ts  notifications.controller.ts
relay/src/lib/: errors.ts  logger.ts  params.ts  prisma.ts  redis.ts
relay/src/middleware/: auth.ts  errorHandler.ts  rateLimiter.ts  validate.ts
relay/src/routes/: agents.routes.ts  auth.routes.ts  dashboard.routes.ts  events.routes.ts  health.routes.ts  notifications.routes.ts
relay/src/schemas/: agents.schema.ts  auth.schema.ts  events.schema.ts  notifications.schema.ts  ws-messages.schema.ts
relay/src/services/: agents.service.ts  alerts.service.ts  (+5 more)
relay/tests/: agents.test.ts  auth.test.ts  events.test.ts  push.test.ts  setup.ts  websocket.test.ts
tests/: conftest.py  test_actions.py  test_aggregator.py  test_alert_engine.py  test_api_endpoints.py  test_chat_handlers.py  test_chat_intents.py  test_health_scoring.py  test_llm_wrapper.py  test_oom_prediction.py  test_recommendations.py  test_token_estimation.py  test_token_validation.py  test_training_detection.py
vigilo/: __init__.py  api.py  cli.py  dashboard.html
vigilo/config/: defaults.json  loader.py
vigilo/intelligence/: __init__.py  alerts.py  history.py  oom.py  progress.py
vigilo/llm/: __init__.py  pricing.py  tracker.py  wrapper.py
web/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+63 files in other folders)
