[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bannin"
version = "0.1.0"
description = "Universal monitoring platform — watch your machines, LLMs, notebooks, and coding tools from your phone."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Bannin Team"}
]
keywords = ["monitoring", "system-metrics", "llm", "gpu", "colab", "kaggle", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "psutil>=5.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5.0"]
mcp = ["mcp>=1.2.0"]
all = ["pynvml>=11.5.0", "mcp>=1.2.0"]

[project.scripts]
bannin = "bannin.cli:main"
bannin-mcp = "bannin.mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Lakshman-P4/Bannin.dev"
Issues = "https://github.com/Lakshman-P4/Bannin.dev/issues"

[tool.setuptools.packages.find]
include = ["bannin*"]

[tool.setuptools.package-data]
bannin = ["dashboard.html", "analytics/dashboard.html", "config/*.json"]
